Damn github not liking dashes..
Updated all files to new subdirectory areas, may have missed one or 2,
so if you find an invalid link please let me know :)

--- a/Web-WoW/Install.html
+++ b/Web-WoW/Install.html
@@ -26,7 +26,7 @@
 				<li><span class="field">author:</span> AXE (creator), maverfax (debugger)</li>
 			</ul>
 		<p class="notes">
-			Located in <a class="field" href="_engine---installer---install.php.html">/engine/installer/install.php</a> (line <span class="field">88</span>)
+			Located in <a class="field" href="installer/install.php.html">/engine/installer/install.php</a> (line <span class="field">88</span>)
 		</p>
 		
 				
