--- a/openwowcms/Form.html
+++ b/openwowcms/Form.html
@@ -25,7 +25,7 @@
 <p class="short-description">Form.php</p>
 <p class="description"><p>The Form class is meant to simplify the task of keeping  track of errors in user submitted forms and the form  field values that were entered correctly.</p><p>Written by: Jpmaster77 a.k.a. The Grandmaster of C++ (GMC)  Last Updated: August 19, 2004</p></p>
 		<p class="notes">
-			Located in <a class="field" href="_engine---func---form.php.html">/engine/func/form.php</a> (line <span class="field">12</span>)
+			Located in <a class="field" href="func/form.php.html">/engine/func/form.php</a> (line <span class="field">12</span>)
 		</p>
 		
 				
