--- a/openwowcms/User.html
+++ b/openwowcms/User.html
@@ -28,7 +28,7 @@
         </p>
         		<!-- ========== Info from phpDoc block ========= -->
 		<p class="notes">
-			Located in <a class="field" href="_engine---core---arcemu.php.html">/engine/core/arcemu.php</a> (line <span class="field">23</span>)
+			Located in <a class="field" href="core/arcemu.php.html">/engine/core/arcemu.php</a> (line <span class="field">23</span>)
 		</p>
 		
 				
