--- a/openwowcms/shoutbox.html
+++ b/openwowcms/shoutbox.html
@@ -25,7 +25,7 @@
 <p class="short-description">class module_base</p>
 <p class="description"><p>Description for class module_base</p></p>
 		<p class="notes">
-			Located in <a class="field" href="_engine---modules---shoutbox.php.html">/engine/modules/shoutbox.php</a> (line <span class="field">15</span>)
+			Located in <a class="field" href="modules/shoutbox.php.html">/engine/modules/shoutbox.php</a> (line <span class="field">15</span>)
 		</p>
 		
 				
