--- a/openwowcms/BaseUser.html
+++ b/openwowcms/BaseUser.html
@@ -22,7 +22,7 @@
 	<div class="info-box-body">
         		<!-- ========== Info from phpDoc block ========= -->
 		<p class="notes">
-			Located in <a class="field" href="_engine---core---base.php.html">/engine/core/base.php</a> (line <span class="field">2</span>)
+			Located in <a class="field" href="core/base.php.html">/engine/core/base.php</a> (line <span class="field">2</span>)
 		</p>
 		
 				
