--- a/openwowcms/Html.html
+++ b/openwowcms/Html.html
@@ -23,7 +23,7 @@
 	<div class="info-box-body">
         		<!-- ========== Info from phpDoc block ========= -->
 		<p class="notes">
-			Located in <a class="field" href="_engine---func---required.php.html">/engine/func/required.php</a> (line <span class="field">17</span>)
+			Located in <a class="field" href="func/required.php.html">/engine/func/required.php</a> (line <span class="field">17</span>)
 		</p>
 		
 				
