--- a/openwowcms/SessionUser.html
+++ b/openwowcms/SessionUser.html
@@ -24,7 +24,7 @@
 	<div class="info-box-body">
         		<!-- ========== Info from phpDoc block ========= -->
 		<p class="notes">
-			Located in <a class="field" href="_engine---func---session.php.html">/engine/func/session.php</a> (line <span class="field">53</span>)
+			Located in <a class="field" href="func/session.php.html">/engine/func/session.php</a> (line <span class="field">53</span>)
 		</p>
 		
 				
