--- a/openwowcms/Update.html
+++ b/openwowcms/Update.html
@@ -22,7 +22,7 @@
 	<div class="info-box-body">
         		<!-- ========== Info from phpDoc block ========= -->
 		<p class="notes">
-			Located in <a class="field" href="_engine---func---admin_update.php.html">/engine/func/admin_update.php</a> (line <span class="field">16</span>)
+			Located in <a class="field" href="func/admin_update.php.html">/engine/func/admin_update.php</a> (line <span class="field">16</span>)
 		</p>
 		
 				
