--- a/openwowcms/adminfunc.html
+++ b/openwowcms/adminfunc.html
@@ -22,7 +22,7 @@
 	<div class="info-box-body">
         		<!-- ========== Info from phpDoc block ========= -->
 		<p class="notes">
-			Located in <a class="field" href="_engine---func---adminfunc.php.html">/engine/func/adminfunc.php</a> (line <span class="field">19</span>)
+			Located in <a class="field" href="func/adminfunc.php.html">/engine/func/adminfunc.php</a> (line <span class="field">19</span>)
 		</p>
 		
 				
