--- a/openwowcms/profile.html
+++ b/openwowcms/profile.html
@@ -25,7 +25,7 @@
 <p class="short-description">class module_base</p>
 <p class="description"><p>Description for class module_base</p></p>
 		<p class="notes">
-			Located in <a class="field" href="_engine---modules---profile.php.html">/engine/modules/profile.php</a> (line <span class="field">12</span>)
+			Located in <a class="field" href="modules/profile.php.html">/engine/modules/profile.php</a> (line <span class="field">12</span>)
 		</p>
 		
 				
