--- a/packages.html
+++ b/packages.html
@@ -15,17 +15,13 @@
 				<table cellpadding="0" cellspacing="0" style="width: 100%">
 					<tr>
 						<td>
-
+							<a href="https://github.com/Swiftsmoke/openwowcms">Source Code</a> | 
 							<a href="ric_README.html" target="right">README</a>
-
 						</td>
 						<td style="width: 2em">&nbsp;</td>
 						<td style="text-align: right">
-
-							<a href="li_openwowcms.html" target="left_bottom">openwowcms</a>
-
-							| 										<a href="li_Web-WoW.html" target="left_bottom">Web-WoW</a>
-
+							<a href="li_openwowcms.html" target="left_bottom">openwowcms</a> |
+							<a href="li_Web-WoW.html" target="left_bottom">Web-WoW</a>
 						</td>
 					</tr>
 				</table>
