--- a/packages.html
+++ b/packages.html
@@ -15,7 +15,7 @@
 				<table cellpadding="0" cellspacing="0" style="width: 100%">
 					<tr>
 						<td>
-							<a href="https://github.com/Swiftsmoke/openwowcms">Source Code</a> | 
+							<a href="https://github.com/Swiftsmoke/openwowcms" target="_blank">Source Code</a> | 
 							<a href="ric_README.html" target="right">README</a>
 						</td>
 						<td style="width: 2em">&nbsp;</td>
