--- a/openwowcms/installer/db_con.php.html
+++ b/openwowcms/installer/db_con.php.html
@@ -4,7 +4,8 @@
 		<head>
 			<!-- template designed by Marco Von Ballmoos -->
 			<title>Docs for page db_con.php</title>
-			<link rel="stylesheet" href="../media/stylesheet.css" />
+			<link rel="stylesheet" href="../../media/stylesheet.css" />
+			<meta http-equiv="cache-control" content="no-cache" />
 			<meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'/>
 		</head>
 		<body>
